@@ -6,6 +6,9 @@ Fix ChangedFileReportTask property annotations.
 (RB=1648828)
 Migrate CheckIdlTask from Groovy to Java.
 
+(RB=1648831)
+Migrate CheckRestModel task from Groovy to Java.
+
 27.0.18
 -------
 (RB=1647191)
